--- a/tct_overtime_update/static/description/index.html
+++ b/tct_overtime_update/static/description/index.html
@@ -106,7 +106,7 @@
         This module Enterprise Overtime update could be useful for creating
         overtime request based on hours.Overtime can be claimed only within
         two days of the work done and the overtime should be atleast 2 hours 
-        to request the claim.Overtime request an only be claimed outside office
+        to request the claim.Overtime request can only be claimed outside office
         hours.
         These overtime could be utilised as cash payment and can be added to payslips.
     </div>
